bad/return_int_in_func_returning_bool.example_compiler_output
ERROR
[1mbad/return_int_in_func_returning_bool.lat:2:25: [1;31merror: [0;1mreturned value of type `int` is not convertible to return type `boolean`[m
boolean test() { return 42; }
                        [1;32m^[m
